--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass-loader": "^11.0.1"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
@@ -25,6 +23,8 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1"
   }
 }
